[tool.poetry]
name = "away"
version = "0.1.0"
description = "A Modern, Idiomatic, Asynchronous Python 3 Wayland Protocol library."
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
